--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,13 @@
         <version>7.4.0</version>
         <scope>test</scope>
     </dependency>
+        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.141.59</version>
+        </dependency>
+
     </dependencies>
 
 </project>
