--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,20 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
     <!-- https://mvnrepository.com/artifact/org.testng/testng -->
@@ -64,10 +78,6 @@
             <artifactId>commons-io</artifactId>
             <version>2.10.0</version>
         </dependency>
-
-
-
-
 
 
 
